--- a/student/index.html
+++ b/student/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/master.css">
+    <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <title></title>
   </head>
   <body>
@@ -12,8 +14,11 @@
         <a id="carslink" href="#">Cars</a>
         <a id="manufacturelistlink" href="#">List of manufacturers</a>
         <a id="newcaradd" href="#">Create new car</a>
-        <a id="newmanufacture" href="#">Create new manufacture</a>
+        <a id="newmanufacturer" href="#">Create new manufacture</a>
       </nav>
     </header>
+    <div id="container">
+
+    </div>
   </body>
 </html>
