--- a/student/index.html
+++ b/student/index.html
@@ -5,20 +5,19 @@
     <link rel="stylesheet" href="/css/master.css">
     <script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
-    <title></title>
+    <title>Pankotai Márk Sándor</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a id="manufacturelink" href="#">Manufacturers</a>
-        <a id="carslink" href="#">Cars</a>
-        <a id="manufacturelistlink" href="#">List of manufacturers</a>
-        <a id="newcaradd" href="#">Create new car</a>
-        <a id="newmanufacturer" href="#">Create new manufacture</a>
-      </nav>
-    </header>
+    <div class="header">
+        <ul>
+          <li><a id="manufacturelink" href="#">Manufacturers</a></li>
+          <li><a id="carslink" href="#">Cars</a></li>
+          <li><a id="manufacturelistlink" href="#">List of manufacturers</a></li>
+          <li><a id="newcaradd" href="#">Create new car</a></li>
+          <li><a id="newmanufacturer" href="#">Create new manufacture</a></li>
+        </ul>
+    </div>
     <div id="container">
-
     </div>
   </body>
 </html>
